# nova

./: .gitignore  CLAUDE.md  README.md  justfile  pyproject.toml  tach.toml
.claude/agents/: code-deduplication.md  code-reviewer.md  config-spill-detector.md  modern-python-optimizer.md  result-usage-optimizer.md  test-coverage.md  test-writer.md
.claude/commands/: prime.md  refine.md
.claude/commands/explore/: feature-spec-interactive-design.md
.github/workflows/: ci.yml
docs/architecture/: adr-001-cli-business-logic-separation.md  adr-002-config-aggregation-and-module-independence.md
docs/architecture/adrs/: adr-002-config-aggregation-and-module-independence.md  adr-003-xdg-directory-structure.md
docs/code-guidelines/: README.md  cli-guidelines.md  functools-result.md  general-python-guidelines.md  modelling.md  python-api-design.md  python-import-conventions.md  python-testing-guidelines.md
docs/drafts/test-reports/: config-module.md
docs/explore/: prd.md  vision.md
docs/explore/prd/: 1-overview.md  2-user-personas-use-cases.md  4-technical-considerations.md  5-risks-mitigations.md  6-open-questions-decisions.md  7-appendix.md  index.md
docs/explore/prd/3-features-requirements/: feature-1-config-management.md  feature-10-learning-mode.md  feature-2-marketplace-bundle-distribution.md  feature-3-domain-bundles.md  feature-4-platform-adapters.md  feature-5-extension-bundles.md  (+5 more)
docs/reports/: 2025-10-24.md  2025-10-26-code-quality-refinement-plan.md
docs/specs/: feature-1-config-management-spec.md  feature-1.1-init-doctor-commands-spec.md  feature-1.2-logging-system-spec.md  feature-2-marketplace-bundle-distribution-spec.md  feature-2-marketplace-management-spec.md  feature-2-story-1-marketplace-config-spec.md  feature-2-story-2-marketplace-manifest-spec.md  feature-2-story-4-bundle-distribution-spec.md  feature-2-story-5-bundle-versioning-spec.md  feature-2-story-6-bundle-publishing-spec.md  feature-3-bundle-management-spec.md
docs/templates/: prd-template.md
marketplace/fetcher/: git.py  local.py  protocol.py
playground/: README.md  justfile  pyproject.toml
scripts/: test-common.sh  test-marketplace-cli.sh
src/nova/: __init__.py  config.py  constants.py  settings.py
src/nova/cli/: __init__.py  command.py  main.py
src/nova/common/: __init__.py  logging.py  models.py  paths.py
src/nova/config/: __init__.py  loader.py  merger.py  models.py  paths.py  protocol.py  resolver.py
src/nova/datastore/: __init__.py  file.py  models.py  protocol.py
src/nova/marketplace/: __init__.py  api.py  config.py  fetcher.py  models.py  protocol.py  sources.py  store.py  validator.py
src/nova/protocols/: __init__.py  config.py
src/nova/utils/: __init__.py  dicts.py  directories.py  format.py  git.py  logging.py  paths.py  validation.py
tests/: test_placeholder.py
tests/apps/: __init__.py
tests/e2e/: test_marketplace_cli.py
tests/unit/cli/: test_config_show.py
tests/unit/common/: test_fields.py  test_paths.py
tests/unit/config/: test_file_config_store.py  test_integration_parse_config.py  test_loader.py  test_logging_scope.py  test_merger.py  test_paths.py  test_resolver.py
tests/unit/datastore/: test_file_datastore.py
tests/unit/marketplace/: test_api.py  test_models.py  test_sources.py  test_validator.py
tests/unit/utils/: test_dicts.py  test_git.py  test_paths.py
(+19 files in other folders)
